--- a/1.JS/ex002/ex002.html
+++ b/1.JS/ex002/ex002.html
@@ -17,7 +17,8 @@
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição!</p>
     <script>
-      window.alert("minha primeira mensagem!");
+      var nome = window.prompt("Qual o seu Nome?");
+      window.alert("Olá " + nome + "!");
     </script>
   </body>
 </html>
